--- a/one-push-getui/src/main/AndroidManifest.xml
+++ b/one-push-getui/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
     <!-- 个推SDK权限配置结束 -->
 
     <application android:allowBackup="true" android:label="@string/app_name"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:usesCleartextTraffic="true">
 
 
         <!-- 配置SDK核心服务 -->
@@ -77,6 +78,7 @@
 
         <!-- 个推SDK配置结束 -->
         <service android:name="com.peng.one.push.getui.GeTuiPushService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
             android:exported="true"
             android:label="PushService"
             android:process=":pushservice"
